[Autodiff] Add error messages for differentiation initiated by SILDifferentiableAttr.

This should be a resolution for: SR-9788

Here is an example of the error that is added (fallback is no-highlight):

diff_proto_problem.swift:29:2: error: function is not differentiable
@differentiable func foo(x: Float) -> Float {
~^~~~~~~~~~~~~~